CAUSEWAY-2485: wip - @Action#domainEvent, @DomainObject#xxxDomainEvent (currently NPE in metamodel :-( )

--- a/examples/demo/domain/src/main/java/demoapp/dom/domain/properties/Property/domainEvent/PropertyDomainEventPage-description.adoc
+++ b/examples/demo/domain/src/main/java/demoapp/dom/domain/properties/Property/domainEvent/PropertyDomainEventPage-description.adoc
@@ -24,8 +24,9 @@ The fallback domain event can be suppressed using the `causeway.applib.annotatio
 In the demo, the `PropertyDomainEventVm` class defines an editable property, "text", annotated with `domainEvent`:
 
 [source,java]
+.PropertyDomainEventPage.java
 ----
-include::PropertyDomainEventVm.java[tags=class]
+include::PropertyDomainEventPage.java[tags=class]
 ----
 <.> the event class to emit; genericised by the target type and the property type
 <.> indicates that the framework should emit this type
