--- a/examples/demo/domain/src/main/java/demoapp/dom/domain/objects/DomainObjectLayout/paged/DomainObjectLayoutPagedPage-description.adoc
+++ b/examples/demo/domain/src/main/java/demoapp/dom/domain/objects/DomainObjectLayout/paged/DomainObjectLayoutPagedPage-description.adoc
@@ -9,7 +9,7 @@ NOTE: for parented collections, the `paged` value can be overridden on a case-by
 
 === How this demo works
 
-The collection on the left hand side shows a set of objects that have been annotated with `paged` of 5.
+The collection on the left hand side shows a set of objects that have been annotated with `paged` of 5.`
 Accordingly, only 5 objects are shown per page.
 
 The associated action "actionReturningCollection" returns these same objects as a standalone collection.
