--- a/examples/demo/domain/src/main/java/demoapp/dom/domain/objects/DomainObjectLayout/tabledec/DomainObjectLayoutTableDecoratorPage-description.adoc
+++ b/examples/demo/domain/src/main/java/demoapp/dom/domain/objects/DomainObjectLayout/tabledec/DomainObjectLayoutTableDecoratorPage-description.adoc
@@ -20,8 +20,7 @@ In terms of code:
 ----
 include::DomainObjectLayoutTableDecorator.java[tags=class]
 ----
-<.> provides the description.
-The viewer renders this in a tooltip.
+<.> indicates that the "datatables" decoration is used.
 
 
 === Related configuration property
