CAUSEWAY-2485: completes @DomainObjectLayout#xxxUiEvent

--- a/examples/demo/domain/src/main/java/demoapp/dom/domain/objects/DomainObjectLayout/tabledec/DomainObjectLayoutTableDecoratorPage-description.adoc
+++ b/examples/demo/domain/src/main/java/demoapp/dom/domain/objects/DomainObjectLayout/tabledec/DomainObjectLayoutTableDecoratorPage-description.adoc
@@ -17,6 +17,7 @@ Here again the `tableDecorator` value _is_ honoured.
 In terms of code:
 
 [source,java,indent=0]
+.DomainObjectLayoutTableDecorator.java
 ----
 include::DomainObjectLayoutTableDecorator.java[tags=class]
 ----
