--- a/examples/demo/domain/src/main/java/demoapp/dom/domain/properties/Property/commandPublishing/jpa/PropertyCommandPublishingJpa-description.adoc
+++ b/examples/demo/domain/src/main/java/demoapp/dom/domain/properties/Property/commandPublishing/jpa/PropertyCommandPublishingJpa-description.adoc
@@ -1,131 +1,41 @@
 :Notice: Licensed to the Apache Software Foundation (ASF) under one or more contributor license agreements. See the NOTICE file distributed with this work for additional information regarding copyright ownership. The ASF licenses this file to you under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at. http://www.apache.org/licenses/LICENSE-2.0 . Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR  CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
 
-The `commandPublishing` element is used to allow or suppress the reification of a property edit into a https://causeway.apache.org/refguide/${CAUSEWAY_VERSION}/applib/index/services/command/Command.html[Command].
+This domain class is used in the demo of `@Property#commandPublishing`.
 
+=== How this demo works
 
-When allowed (the default), then the https://causeway.apache.org/refguide/${CAUSEWAY_VERSION}/applib/index/services/command/Command.html[Command] is sent to registered implementation(s) of https://causeway.apache.org/refguide/${CAUSEWAY_VERSION}/applib/index/services/publishing/spi/CommandSubscriber.html[CommandSubscriber] SPI, _after_ the interaction has completed.
-One use case is to replicate and replay commands to a secondary system, for example for regression testing.
-For more on this, see the "Command Replay" section below.
+This entity has two editable properties, `name` and `notes`.
+One `name` property has command publishing enabled, while the `notes` property does not.
 
-Commands are also used under the covers to allow property edits to be made asynchronously using the link:https://causeway.apache.org/refguide/${CAUSEWAY_VERSION}/applib/index/services/wrapper/WrapperFactory.html[WrapperFactory].
+Editing the `name` property will result in a command representing the property edit being persisted; these are listed in the collection at the bottom of the page.
 
-[NOTE]
-====
-The list of persisted https://causeway.apache.org/refguide/${CAUSEWAY_VERSION}/applib/index/services/command/Command.html[Command]s can be viewed in a collection at the left bottom of the page.
-https://causeway.apache.org/refguide/${CAUSEWAY_VERSION}/applib/index/services/command/Command.html[Command]s are persisted after the page rendering phase, so to view a just-persisted command, refresh the page.
+In terms of code:
 
-If running in prototype mode, the list of persisted https://causeway.apache.org/refguide/${CAUSEWAY_VERSION}/applib/index/services/command/Command.html[Command]s can also be truncated from the activity menu.
-====
-
-== Annotated
-
-The `commandPublishing` element can be specified explicitly using an annotation through `@Property#commandPublishing()`:
-
-[source,java,indent=0]
-----
-include::PropertyCommandPublishingJpa.java[tags=annotation]
-----
-<.> explicitly specifies that invoking the action should be reified .
-
-The command publishing can also be disabled:
-
-[source,java,indent=0]
-----
-include::PropertyCommandPublishingJpa.java[tags=annotation-2]
-----
-<.> explicitly specifies that invoking the action should not be reified.
-
-
-== Meta-annotated
-
-The `commandPublishing` element can also be specified using a custom meta-annotation:
-
-* the meta-annotation is defined as:
+* property with command publishing enabled:
 +
 [source,java,indent=0]
+..PropertyCommandPublishing.java
 ----
-include::../PropertyCommandPublishingEnabledMetaAnnotation.java[tags=class]
+include::../PropertyCommandPublishing.java[tags=published]
 ----
-<.> annotated for a property
-<.> annotation can be applied to a property field or getter method
+<.> makes the property editable...
+<.> \... and enables command publishing
 
-* and can be applied to a property:
+* property with command publishing disabled:
 +
 [source,java,indent=0]
+..PropertyCommandPublishing.java
 ----
-include::PropertyCommandPublishingJpa.java[tags=meta-annotation]
+include::../PropertyCommandPublishing.java[tags=not-published]
 ----
-<.> semantic is inherited from the meta-annotation
+<.> makes the property editable...
+<.> \... but command publishing is disabled
 
-
-=== Meta-annotated Overridden
-
-The meta-annotation can itself be overridden:
-
+* contributed collection showing persisted ``CommandLogEntry``s:
++
 [source,java,indent=0]
+.PropertyCommandPublishing_changeNamePublished.java
 ----
-include::PropertyCommandPublishingJpa.java[tags=meta-annotation-overridden]
+include::../PropertyCommandPublishing_publishedCommands.java[tags=class]
 ----
-<.> semantic from meta-annotation ...
-<.> \... is overridden by the `@Property` annotation
-
-
-
-== CommandSubscriber
-
-The demo includes the link:https://causeway.apache.org/userguide/${CAUSEWAY_VERSION}/commandlog/about.html extension, so every command is persisted.
-These can be viewed in the collection at the bottom of the left page.
-https://causeway.apache.org/refguide/${CAUSEWAY_VERSION}/applib/index/services/command/Command.html[Command]s are persisted after the page rendering phase, so to view a just-persisted command, refresh the page.
-
-
-== Configuration
-
-By default, reification of commands for action invocations is enabled.
-This can be configured globally:
-
-[source,yaml]
-.application.yml
-----
-causeway:
-  applib:
-    annotation:
-      property:
-        command: none   # or 'all', or 'ignore_safe'
-----
-
-In addition to globally enabling or disabling command reification, it is also possible to specify `ignore_safe`.
-This enables commands for all actions except those that have safe (that is, query-only) semantics.
-In other words actions are reified to commands except for those that don't change (aren't declared as changing) the state of the system.
-
-//
-// command replay moved to the incubator for the time being.
-//
-//== Command Replay
-//
-//The link:https://causeway.apache.org/userguide/${CAUSEWAY_VERSION}/commandlog/about.html extension provides an implementation of `CommandServiceListener` to allow https://causeway.apache.org/refguide/${CAUSEWAY_VERSION}/applib/index/services/command/Command.html[Command]s to be persisted.
-//It also provides a RESTful endpoint to allow https://causeway.apache.org/refguide/${CAUSEWAY_VERSION}/applib/index/services/command/Command.html[Command]s to be queried.
-//This is used by the link:https://causeway.apache.org/extensions/2.0.0-M3/commandreplay/about.html[Command Replay] extension to allow commands to be replayed on a secondary system, for regression testing.
-//
-//The associated `commandDtoProcessor()` element allows the https://causeway.apache.org/refguide/${CAUSEWAY_VERSION}/applib/index/services/command/Command.html[Command] XML representation (as a `CommandDto`) to be processed before being surfaced through the REST endpoint.
-//One use case is to allow data to be obfuscated for security, or to replace large payloads (such as Blobs) with a smaller dummy payload.
-//As well as specifying DTO processing at the action level, it can be specified globally by implementing the link:https://causeway.apache.org/refguide/2.0.0-M3/applib-svc/CommandDtoProcessorService.html[CommandDtoProcessorService] SPI.
-//
-//The command replay can be demonstrated by running a second instance of the demo app, using the "secondary" Spring Boot profile.
-//This is most easily done by specifying a system property:
-//
-//    -Dspring.profiles.active=secondary
-//
-//This activates the `application-secondary.properties` configuration file:
-//
-//[source,properties]
-//----
-//causeway.extensions.commandreplay.primary-access.base-url-restful=http://localhost:8080/restful/
-//causeway.extensions.commandreplay.primary-access.user=sven
-//causeway.extensions.commandreplay.primary-access.password=pass
-//causeway.extensions.commandreplay.primary-access.base-url-wicket=http://localhost:8080/wicket/
-//
-//server.port=9090
-//----
-//
-//The secondary instance of demoapp is accessible at link:http://localhost:9090[].
-//Since both primary and secondary start with the same initial state, any commands executed on the primary are replicated to the secondary and result in the same changes of state.
+<.> repository provided by the _commandLog_ extension.
