--- a/examples/demo/domain/src/main/java/demoapp/dom/domain/properties/Property/commandPublishing/PropertyCommandPublishingPage-description.adoc
+++ b/examples/demo/domain/src/main/java/demoapp/dom/domain/properties/Property/commandPublishing/PropertyCommandPublishingPage-description.adoc
@@ -1,7 +1,7 @@
 :Notice: Licensed to the Apache Software Foundation (ASF) under one or more contributor license agreements. See the NOTICE file distributed with this work for additional information regarding copyright ownership. The ASF licenses this file to you under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at. http://www.apache.org/licenses/LICENSE-2.0 . Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR  CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
 
 
-Every property edit is reified into a link:https://causeway.apache.org/refguide/2.0.0-SNAPSHOT/applib/index/services/command/Command.html[Command] which captures the target and the proposed property value, as well as the "who" and the "when" (identity of the user performing the action and a timestamp).
+Every _intention_ to edit a propertyis reified into a link:https://causeway.apache.org/refguide/2.0.0-SNAPSHOT/applib/index/services/command/Command.html[Command] which captures the target and the proposed property value, as well as the "who" and the "when" (identity of the user performing the action and a timestamp).
 
 The link:https://causeway.apache.org/refguide/2.0.0-SNAPSHOT/applib/index/annotation/Property.html#commandpublishing[@Property#commandPublishing] determines whether subscribers are notified of the property being edited.
 
