--- a/examples/demo/domain/src/main/java/demoapp/dom/domain/actions/Action/executionPublishing/ActionExecutionPublishingPage-description.adoc
+++ b/examples/demo/domain/src/main/java/demoapp/dom/domain/actions/Action/executionPublishing/ActionExecutionPublishingPage-description.adoc
@@ -1,9 +1,9 @@
 :Notice: Licensed to the Apache Software Foundation (ASF) under one or more contributor license agreements. See the NOTICE file distributed with this work for additional information regarding copyright ownership. The ASF licenses this file to you under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at. http://www.apache.org/licenses/LICENSE-2.0 . Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR  CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
 
 
-Every action invocation is reified into a link:https://causeway.apache.org/refguide/2.0.0-SNAPSHOT/applib/index/services/command/Execution.html[Execution] which captures the target and action arguments, and its outcome, as well as the "who" and the "when" (identity of the user performing the action and a timestamp).
+Every action invocation is reified into an link:https://causeway.apache.org/refguide/2.0.0-SNAPSHOT/applib/index/services/iactn/Execution.html[Execution] which captures the target and action arguments, and its outcome, as well as the "who" and the "when" (identity of the user performing the action and a timestamp).
 
-The link:https://causeway.apache.org/refguide/2.0.0-SNAPSHOT/applib/index/annotation/Action.html#commandpublishing[@Action#executionPublishing] determines whether subscribers are notified of the action being executed.
+The link:https://causeway.apache.org/refguide/2.0.0-SNAPSHOT/applib/index/annotation/Action.html#executionpublishing[@Action#executionPublishing] determines whether subscribers are notified of the action being executed.
 
 The _executionLog_ extension provides an out-of-the-box subscriber implementation that persists every published execution into a log.
 This can be invaluable for auditing and performance monitoring.
@@ -21,7 +21,7 @@ These actions can be used to change the name of any one of those entities.
 
 * the `changeNamePublished` action has execution publishing enabled.
 +
-This will result in an execution representing the action invocation from being persisted as an `ExecutionLogEntry`; these are listed in the collection at the bottom of the page.
+This will result in an execution representing the action invocation being persisted as an `ExecutionLogEntry`; these are listed in the collection at the bottom of the page.
 The execution of one of the actions is published, the other is not.
 
 * the `changeNameNotPublished` action has execution publishing disabled.
