--- a/examples/demo/domain/src/main/java/demoapp/dom/domain/actions/ActionLayout/hidden/ActionLayoutHidden-description.adoc
+++ b/examples/demo/domain/src/main/java/demoapp/dom/domain/actions/ActionLayout/hidden/ActionLayoutHidden-description.adoc
@@ -1,6 +1,6 @@
 :Notice: Licensed to the Apache 1Software Foundation (ASF) under one or more contributor license agreements. See the NOTICE file distributed with this work for additional information regarding copyright ownership. The ASF licenses this file to you under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at. http://www.apache.org/licenses/LICENSE-2.0 . Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR  CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
 
-This domain class is used in the demo of `@Action#hidden`.
+This domain class is used in the demo of `@ActionLayout#hidden`.
 
 === How this demo works
 
@@ -11,36 +11,36 @@ From this page, you can inspect the visibility of the actions from the context o
 * `hidden` not specified:
 +
 [source,java]
-.ActionHidden_changeName.java
+.ActionLayoutHidden_changeName
 ----
-include::ActionHidden_changeName.java[tags=class]
+include::ActionLayoutHidden_changeName.java[tags=class]
 ----
 <.> no `hidden` element specified, so implicitly visible
 
 * `hidden` everywhere:
 +
 [source,java]
-.ActionHidden_changeNameHiddenEverywhere.java
+.ActionLayoutHidden_changeNameHiddenEverywhere.java
 ----
-include::ActionHidden_changeNameHiddenEverywhere.java[tags=class]
+include::ActionLayoutHidden_changeNameHiddenEverywhere.java[tags=class]
 ----
 <.> action should _NOT_ be visible for this entity.
 
 * `hidden` on object forms (but not necessarily on collections):
 +
 [source,java]
-.ActionHidden_changeNameHiddenObjectForms.java
+.ActionLayoutHidden_changeNameHiddenObjectForms.java
 ----
-include::ActionHidden_changeNameHiddenObjectForms.java[tags=class]
+include::ActionLayoutHidden_changeNameHiddenObjectForms.java[tags=class]
 ----
 <.> action should _NOT_ be visible for this entity.
 
 * `hidden` on collections (but not necessarily on object forms):
 +
 [source,java]
-.ActionHidden_changeNameHiddenAllTables.java
+.ActionLayoutHidden_changeNameHiddenAllTables.java
 ----
-include::ActionHidden_changeNameHiddenAllTables.java[tags=class]
+include::ActionLayoutHidden_changeNameHiddenAllTables.java[tags=class]
 ----
 <.> action _should_ be visible for this entity.
 
