--- a/examples/demo/domain/src/main/java/demoapp/dom/domain/actions/ActionLayout/hidden/ActionLayoutHiddenPage-description.adoc
+++ b/examples/demo/domain/src/main/java/demoapp/dom/domain/actions/ActionLayout/hidden/ActionLayoutHiddenPage-description.adoc
@@ -1,10 +1,58 @@
 :Notice: Licensed to the Apache Software Foundation (ASF) under one or more contributor license agreements. See the NOTICE file distributed with this work for additional information regarding copyright ownership. The ASF licenses this file to you under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at. http://www.apache.org/licenses/LICENSE-2.0 . Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR  CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
 
-The `hidden` attribute indicates where in the UI the action should *not* be visible.
+The link:https://causeway.apache.org/refguide/2.0.0-SNAPSHOT/applib/index/annotation/ActionLayout.html#hidden[@ActionLayout#hidden] element specifies whether an action should be visible in the UI or not.
 
-[source,java,indent=0]
-----
-include::ActionLayoutHiddenPage.java[tags=act]
-----
+=== How this demo works
 
-<.> in effect makes this action's button invisible _everywhere_ (in the UI)
+The collection on the left hand side shows a set of domain objects.
+That domain object defines four actions, and depending upon context, they may be visible on an object form or when rendered in a collection.
+From this page, you can inspect the visibility of the actions from the context of a parented collection.
+
+Navigate into each domain object to inspect the visibility of the actions on an object form.
+
+The four actions are:
+
+* `hidden` not specified:
++
+[source,java]
+.ActionLayoutHidden_changeName.java
+----
+include::ActionLayoutHidden_changeName.java[tags=class]
+----
+<.> action _should_ be visible for this entity.
++
+However, the Wicket viewer does _not_ render actions on instances of collections, so the action will not in fact be shown as visible.
+
+* `hidden` everywhere:
++
+[source,java]
+.ActionLayoutHidden_changeNameHiddenEverywhere.java
+----
+include::ActionLayoutHidden_changeNameHiddenEverywhere.java[tags=class]
+----
+<.> action should _NOT_ be visible for this entity.
+
+* `hidden` on object forms (but not necessarily on collections):
++
+[source,java]
+.ActionLayoutHidden_changeNameHiddenObjectForms.java
+----
+include::ActionLayoutHidden_changeNameHiddenObjectForms.java[tags=class]
+----
+<.> action should be visible for this entity.
++
+However, the Wicket viewer does _not_ render actions on instances of collections, so the action will not in fact be shown as visible.
+
+* `hidden` on collections (but not necessarily on object forms):
++
+[source,java]
+.ActionLayoutHidden_changeNameHiddenAllTables.java
+----
+include::ActionLayoutHidden_changeNameHiddenAllTables.java[tags=class]
+----
+<.> action should _NOT_ be visible for this entity.
+
+Currently the Wicket viewer does _not_ render actions of instances of collections, and so none of these actions will be visible on this page.
+However, if you navigate into these domain objects then some of these actions will be visible.
+
+
