--- a/examples/demo/domain/src/main/java/demoapp/dom/domain/actions/Action/typeOf/ActionTypeOfPage-description.adoc
+++ b/examples/demo/domain/src/main/java/demoapp/dom/domain/actions/Action/typeOf/ActionTypeOfPage-description.adoc
@@ -1,38 +1,53 @@
 :Notice: Licensed to the Apache Software Foundation (ASF) under one or more contributor license agreements. See the NOTICE file distributed with this work for additional information regarding copyright ownership. The ASF licenses this file to you under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at. http://www.apache.org/licenses/LICENSE-2.0 . Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR  CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
 
-The `typeOf` element indicates the element type for an action that returns a collection.
+CAUTION: this feature is currently broken; see link:https://issues.apache.org/jira/browse/CAUSEWAY-3423[CAUSEWAY-3423].
 
-Normally this can be inferred from the generic type, for example `Customer` within `List<Customer>`.
-This annotation offers an alternative syntax.
+Actions that return lists of objects are usually parameterized, for example, returning `List<Customer>` or `List<Order>`.
+The framework uses the generic parameter to ensure that the list is rendered appropriately for that element type.
 
-CAUTION: this annotation may be deprecated in the future.
+In some rare scenarios though it may be necessary to return only a raw (non-parameterized) `List`.
+In these cases the link:https://causeway.apache.org/refguide/2.0.0-SNAPSHOT/applib/index/annotation/Action.html#typeof[@Action#typeOf] element can be used to indicate the element type of the returned `List`.
 
-// TODO: I have a suspicion that there is a genuine use case for this annotation ... but need to dig deeper.
+=== How this demo works
 
-== Example
-
-The demo object defines a `children` collection:
+This page object defines a `children` collection:
 
 [source,java]
 ----
 include::ActionTypeOfPage.java[tags=class-collections-children]
 ----
 
-The `find` action returns a standalone collection for a subset of these child objects matching the specified value:
+It also defines three variants of a "find" action, which all do the same thing: return those objects whose name matches.
 
+* the `find` action uses a generic parameter list:
++
 [source,java,indent=0]
 ----
-include::ActionTypeOfPage.java[tags=action]
+include::ActionTypeOfPage.java[tags=action-returning-generic-list]
+----
+<.> indicates the type of element in the returned list
++
+The standalone list returned shows columns for the properties of the element type.
+
+* the `findReturningRawList` action has the same functionality, but is defined to return a raw list:
++
+[source,java,indent=0]
+----
+include::ActionTypeOfPage.java[tags=action-returning-raw-list]
+----
+<.> action defines a raw list
++
+Because this action effectively is returning only a `List<Object>`, the resultant table shows only icons for the matching elements; there are no columns shown for its properties.
+
+* finally the `findReturningRawListButAnnotated` action also return a raw list, but is also annotated using `@Action#typeOf`:
++
+[source,java,indent=0]
+----
+include::ActionTypeOfPage.java[tags=action-returning-raw-list-but-annotated]
 ----
 <.> indicates the type of element in the returned list
 <.> action defines a raw list
-
-That said, the `findButWithNoAnnotation` action has identical behaviour, even without the `typeOf` element:
-
-[source,java,indent=0]
-----
-include::ActionTypeOfPage.java[tags=action-no-annotation]
-----
-<.> action defines a raw list
++
+The standalone list returned by this object should show the full details of the child object.
 
 
