CAUSEWAY-3424: [Programming Model] remove ActionLayout#bookmarking
- was marked deprecated for removal in RC1

--- a/antora/components/relnotes/modules/ROOT/pages/2023/2.0.0-RC2/mignotes.adoc
+++ b/antora/components/relnotes/modules/ROOT/pages/2023/2.0.0-RC2/mignotes.adoc
@@ -5,6 +5,17 @@
 
 This page will be added to as development progresses.
 
+== Programming Model
+
+=== Removed
+* `ActionLayout#bookmarking` ... had conflicting semantics with `DomainObjectLayout#bookmarking`,
+that is, if the latter was present on an Action's return type, hence removed
+
+=== Marked Deprecated for Removal
+* `Action#hidden` ... use `ActionLayout#hidden` instead
+* `Collection#hidden` ... use `CollectionLayout#hidden` instead
+* `Property#hidden` ... use `PropertyLayout#hidden` instead
+
 == Maven Artifacts
 
 Incubator projects `viewer-vaadin` and `viewer-javafx` were discontinued in version 2.x,
