--- a/examples/demo/domain/src/main/java/demoapp/dom/domain/actions/ActionLayout/cssClassFa/ActionLayoutCssClassFaPage-description.adoc
+++ b/examples/demo/domain/src/main/java/demoapp/dom/domain/actions/ActionLayout/cssClassFa/ActionLayoutCssClassFaPage-description.adoc
@@ -1,25 +1,45 @@
 :Notice: Licensed to the Apache Software Foundation (ASF) under one or more contributor license agreements. See the NOTICE file distributed with this work for additional information regarding copyright ownership. The ASF licenses this file to you under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at. http://www.apache.org/licenses/LICENSE-2.0 . Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR  CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
 
-It's quite common for user interfaces to include an icon for each action or menu item as a visual clue as to the purpose of that action.
+To help the end-user navigate a page, it can sometimes be helpful to decorate individual actions within icons so that their purpose is more obvious.
+
 The link:https://causeway.apache.org/refguide/2.0.0-SNAPSHOT/applib/index/annotation/ActionLayout.html#cssclassfa[@ActionLayout#cssClassFa] element allows this to be done by specifying the _Font Awesome_ CSS class (or classes) with which to decorate an action.
 This is used for whether the action is rendered as a button or as a menu item.
 
 === How this demo works
 
-This page includes two actinos
+This page has a `name` property and two actions, both of which can be used to update that property.
+The two actions have different fa icons
 
+* `updateNameWithFaIconOnTheLeft`
++
 [source,java,indent=0]
 ----
-include::ActionLayoutCssClassFaPage.java[tags=actLeftAndRight]
+include::ActionLayoutCssClassFaPage.java[tags=updateNameWithFaIconOnTheLeft]
 ----
+<.> uses the `bus` icon for this action
 
-<.> in effect uses the `bus` icon for this action
+* `updateNameWithFaIconOnTheRight`
++
+[source,java,indent=0]
+----
+include::ActionLayoutCssClassFaPage.java[tags=updateNameWithFaIconOnTheRight]
+----
+<.> use the `car` icon for this action
+<.> and place the icon on the right (by default it is placed on the left)
 
-<.> the `cssClassFaPosition` attribute indicates the position of the _Font Awesome_ icon;
+
 in effect the icon is rendered on the _right_ of the action button
 
 
 ==== Related configuration property
+
+Rather than styling each action individually, it's possible to use a configuration property which defines styles globally.
+
+It works by specifying a set of `regex:cssClassFa` pairs; if the action's identifier matches the regex, then the fa icon is applied.
+This is a great way to ensure that actions with similar semantics have similar names; they will then pick up the same visual cues.
+
+The following is taken from this demo app:
+
 
 [source,yaml]
 .application.yml
@@ -28,9 +48,6 @@ causeway:
 
   applib:
     annotation:
-      action:
-        execution-publishing: none
-        command-publishing: none
       action-layout:
         css-class-fa:
           patterns:
@@ -44,7 +61,11 @@ causeway:
             all.*:fa-list,
             export.*:fa-file-export,
             import.*:fa-file-import
-        css-class:
-          patterns:
-            delete.*:btn-danger
 ----
+
+
+=== .layout.xml
+
+Instead of using `@ActionLayout#cssClassFa`, it is also possible to specify the fa icon class using the `<action id="..." cssClass="...">` in the link:https://causeway.apache.org/userguide/2.0.0-RC1/fun/ui.html#by-example[.layout.xml] file.
+
+One advantage of using the `.layout.xml` file is that changes can be picked up without having to restart the application.
