CAUSEWAY-2485: reworks @ActionLayout#sequence

--- a/examples/demo/domain/src/main/java/demoapp/dom/domain/actions/ActionLayout/named/ActionLayoutNamedPage-description.adoc
+++ b/examples/demo/domain/src/main/java/demoapp/dom/domain/actions/ActionLayout/named/ActionLayoutNamedPage-description.adoc
@@ -45,8 +45,7 @@ Instead of using `@ActionLayout#named`, it is also possible to specify a name in
 ...
 ----
 
-One advantage of using the `.layout.xml` file is that changes can be picked up without having to restart the application.
-On the other hand, including descriptions can make that file rather large.
+The main advantage of using the `.layout.xml` file is that changes can be picked up without having to restart the application.
 
 
 === Alternatives
